package com.aguskoll.androidcomposebase.ui.pages.main

import androidx.compose.material3.MaterialTheme
import androidx.compose.material3.Text
import androidx.compose.runtime.Composable

/**
 * Main Page Example
 * **/
@Composable
fun MainPage() {
    Text(
        text = "Main Page",
        style = MaterialTheme.typography.titleMedium
    )
}
