...
            Text(stringResource(R.string.log_in_welcome))
            TextField(
                value = uiState.email,
                modifier = Modifier
                    .fillMaxWidth()
                    .focusable()
                    .testTag("LOGIN_EMAIL_INPUT"),
                onValueChange = { value ->
                    viewModel.onEmailChanged(value)
                },
                label = { Text(stringResource(R.string.log_in_email_label)) },
                isError = !uiState.isEmailValid,
                supportingText = {
...
